--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 title: MarkKe
-subtitle: A blog-orientation theme for Jekyll
+subtitle: 认真是我们参与社会的方式
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
